--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [DHCP]
-interface = eth0
+interface = wlp2s0
 ip_pool = 192.168.1.100-192.168.1.200
 subnet_mask = 255.255.255.0
 gateway = 192.168.1.1
