--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,12 @@
 [DHCP]
 interface = wlp2s0
-ip_pool = 192.168.1.100-192.168.1.200
+ip_pool = 192.168.0.0/24
 subnet_mask = 255.255.255.0
-gateway = 192.168.1.1
-dns_servers = 192.168.1.1, 8.8.8.8
+gateway = 192.168.0.254
+dns_servers = 192.168.0.254, 8.8.8.8
 lease_time = 300
+
+
+## check with ip addr first
+
+## sudo ip link set wlp2s0 promisc on
